  that adults aren't so limited in what they can say.  Babies still gain one
  letter per year up to age 8, but by age 16, the limit is 66 characters. 
  After that, you gain one character per two years, and can say 88 characters
  by old age.

--/LEADER command now gives you an arrow to your top leader.  Fixes #615

--New /UNFOLLOW command that can be used by the youngest baby.



Server Fixes

--Truncating said text to avoid overflowing metadata limit when writing
  (client and server should enforcing good limits anyway, but added more checks
  just in case those numbers change in the future).

--Fixed bug in DING redeem message sent to redeemed player (was being sent to
  everyone by accident).




Version 337    2020-May-15

--Fixed glitch in VOG mode that left distant players invisible (marked out of
  range) when we jumped to them.

--New /LEADER /FOLLOWER and /ALLY command to show labels above the heads of
  people.  Part of #610

--DING messages showing follower and ally count when you use the new commands.
  Part of #610

--Help screen shows I FOLLOW MYSELF.  Part of #610





Server Fixes

--You get informed when you target a top leader to kill (instead of an arrow
  pointing toward that leader as a possible exiler).

--Fixed posse size system glitch when posse started with NoWaitWeapon.
  Thanks Wondible.

--Fixed so that there's no victim emote when targetting with NoWaitWeapon
  (snowball, tatoo needle).  Before, emote was getting stuck after dropping
  weapon.

--DING message upon issuing an order now shows you your follower count.

--When pointing you toward closest follower after issuing an order, don't
  consider followers you see as exiled.

--Last heard monument call is passed from mother to baby, but only perpetuated
  one generation (inherited calls are not passed to next generation after
  that).  No more perpetual stale monument calls.

--Support for +causeAutoOrientH, which triggers E/W neighbors to auto-orient,