@@ -29,3 +29,4 @@
 *homesick
 *spicyFood
 *refuseFood
+*starving
